modificação nas imagens, overflow-x na seção de imagens, remoção da seção lgpd

--- a/assets/css/layout/_commons.css
+++ b/assets/css/layout/_commons.css
@@ -24,15 +24,21 @@ source, img{
   display: none;
 }
 
+
 @media screen and (min-width: 1080px) {
   .secao--conteudo,
   .secao--img{
     padding: 2rem;
   }
 
-
   .layout-decorativo{
     display: grid;
   }
 }
 
+@media screen and (max-width: 1079px) {
+  .grid--2col{
+    overflow: hidden;
+    padding-bottom: 2rem;
+  }
+}
